--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ volumes:          #define volume for docker
   d-mariadb:
 services:
   owncloud:
-    image: owncloud 
+    image: nextcloud 
     restart: always
-    container_name: c-owncloud
+    container_name: c-nextcloud
     ports:
       - 8080:80
     volumes:
@@ -28,3 +28,5 @@ services:
 networks:               #create docker network
   owncloud-network: 
     driver: bridge
+
+#testing gitpod
